--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -10,6 +10,9 @@ en:
       # html: '<abbr title="required">*</abbr>'
     error_notification:
       default_message: "Please review the problems below:"
+    # hints:
+    #   bucket:
+    #     name: "Be careful when changing this, as it may affect existing links to images."
     # Labels and hints examples
     # labels:
     #   defaults:
